--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="incompletefield">Please input all fields</string>
     <string name="xmlUi">/xmlui/handle/</string>
     <string name="protocol">http://</string>
-    <string name="wifi_warning">Please ensure you are connected to Amrita Wifi to have a smooth experience.</string>
+    <string name="wifi_warning">Please ensure you are connected to Amrita Wifi \n to have a smooth experience.</string>
 
     <string name="url_exams">https://intranet.cb.amrita.edu/?q=node/244</string>
 
