--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,9 @@
     <string name="url_exams">https://intranet.cb.amrita.edu/?q=node/244</string>
 
 
-    <string name="banner_id">ca-app-pub-9174356806392379/5586578490</string>
+    <string name="test_id">ca-app-pub-3940256099942544/6300978111</string>
+
+    <string name="banner_id">ca-app-pub-3429574086261739/1129855909</string>
 
     <string name="default_notification_channel_id" translatable="false">Alerts</string>
 
