--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,14 +17,14 @@
     <string name="facultyurl">https://intranet.cb.amrita.edu/TimeTable/Faculty/</string>
     <string name="port">8080</string>
     <string name="category_images">Images</string>
-    <string name="proxyurl">https://dev.rajkumaar.co.in/repo/proxy.php</string>
+    <string name="proxyurl">https://dev-rajkumaar.herokuapp.com/proxy.php</string>
     <string name="incompletefield">Please input all fields</string>
     <string name="xmlUi">/xmlui/handle/</string>
     <string name="protocol">http://</string>
     <string name="wifi_warning">Please ensure you are connected to Amrita Wifi \n to have a smooth experience.</string>
 
     <string name="url_exams">https://intranet.cb.amrita.edu/?q=node/244</string>
-    <string name="dev_domain">http://dev.rajkumaar.co.in</string>
+    <string name="dev_domain">https://rajkumaar.herokuapp.com</string>
 
 
     <string name="test_id">ca-app-pub-3940256099942544/6300978111</string>
