Now lets you set widgets for any image from the downloads  - Reformats code
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
 
 
     <string name="site_change">Site\'s structure has changed. Please wait until I catch up.</string>
+    <string name="add_widget">Add widget</string>
 </resources>
