Timings made dynamic completely  - App Update checked from Firebase Database  - Disclaimer on timings & attendance comments
Signed-off-by: Rajkumar S <rajkumaar2304@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="site_change">Site\'s structure has changed. Please wait until I catch up.</string>
     <string name="add_widget">Add widget</string>
     <string name="made_love">Made with {fa-heart-o}</string>
-    <string name="donation">This is a donation for the effort of bringing things from different places under a single roof right at your fingertips.
-        To develop an open source software takes technical knowledge, time, and effort. I would be very glad if you can appreciate my work with your kind donations.
+    <string name="donation">This will be a donation for the effort of developing Amrita Repository which brings resources from different websites under a single roof right at your fingertips.
+        To develop a software like this takes technical knowledge, time, and effort. I would be very glad if you can appreciate my work with your kind donations.
         All the content brought to you in this app belongs to Amrita Vishwa Vidyapeetham and I don\'t own any of these.\n\nThank you in advance,\nRajkumar</string>
     <string name="ftp_steps">1) Turn on WiFi Hotspot on your computer (or) any other device, to which you want to share files of Amrita Repository.
     \n\n2) Connect your mobile device to that WiFi hotspot.
