--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="wifi_warning">An error occurred while connecting to the server.</string>
     <string name="url_exams">https://intranet.cb.amrita.edu/?q=node/244</string>
     <string name="dev_domain">http://dev.rajkumaar.co.in</string>
+    <string name="lib_catalog_domain">http://ctf.cb.amrita.edu:4310/app/library-catalog</string>
+
+
     <string name="placement_id">1281797331958232_1281798865291412</string>
 
     <string name="default_notification_channel_id" translatable="false">Alerts</string>
@@ -46,7 +49,11 @@
 
     <string name="study_materials_info">
         If you are a faculty and would like to add your site on behalf of your department in this application,
-        please drop a mail to rajkumaar2304@gmail.com</string>
+        please drop a mail to rajkumaar2304@icloud.com</string>
 
     <string name="donate">If you &#x2665; the app, consider donating here</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
