Fixes #5 - Invalid UPI id
Signed-off-by: Rajkumar S <rajkumaar2304@icloud.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="upi_id">7592903711@upi</string>
 
 </resources>
