Adds downloading PDF for AUMS attendance
Adds e-resources in library section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="donate">If you &#x2665; the app, consider donating here</string>
 
     <string name="upi_id">7592903711@upi</string>
+    <string name="central_library">https://www.amrita.edu/school/engineering/coimbatore/resources/library</string>
 
 </resources>
