--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2020 RAJKUMAR S
+  -->
+
 <resources>
     <string name="app_name">Amrita Repository</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -53,4 +57,5 @@
     <string name="central_library">https://www.amrita.edu/school/engineering/coimbatore/resources/library</string>
     <string name="course_name_url">https://intranet.cb.amrita.edu/TimeTable/</string>
     <string name="branch_name_url">"https://intranet.cb.amrita.edu/TimeTable/funcTimeTable.php?func=drop_1&amp;drop_var="</string>
+    <string name="all_contributors_link">https://raw.githubusercontent.com/rajkumaar23/amrita-repository/master/.all-contributorsrc</string>
 </resources>
