--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="server_error">An error occurred while connecting to server</string>
     <string name="amrita_file_prefix">https://www.amrita.edu/file/</string>
     <string name="telegram_bot_warning">Telegram is being blocked by few internet providers. If opening this link doesn\'t work for you, kindly install Telegram from PlayStore and search for <b>@amrepobot</b>.</string>
+    <string name="go_back"><![CDATA[&#8592; Go Back]]></string>
 </resources>
