--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
     <string name="amrita_file_prefix">https://www.amrita.edu/file/</string>
     <string name="telegram_bot_warning">Telegram is being blocked by few internet providers. If opening this link doesn\'t work for you, kindly install Telegram from PlayStore and search for <b>@amrepobot</b>.</string>
     <string name="go_back"><![CDATA[&#8592; Go Back]]></string>
+    <string name="update_failed">The Update Failed, Starting again!</string>
+    <string name="update_downloaded">An update has just been downloaded.</string>
+    <string name="restart">RESTART</string>
 </resources>
