--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,6 @@
     <string name="telegram_bot_warning">Telegram is being blocked by few internet providers. If opening this link doesn\'t work for you, kindly install Telegram from PlayStore and search for <b>@amrepobot</b>.</string>
     <string name="go_back"><![CDATA[&#8592; Go Back]]></string>
     <string name="update_failed">The update failed, starting again!</string>
-    <string name="update_downloaded">An update has just been downloaded.</string>
-    <string name="restart">RESTART</string>
+    <string name="not_uploaded_yet">The document you asked for, is not uploaded yet.</string>
+    <string name="faq_exams_url">https://intranet.cb.amrita.edu/?q=exam</string>
 </resources>
