Replace GPlay donations with PayPal link
Signed-off-by: Rajkumar S <rajkumaar2304@icloud.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="update_failed">The update failed, starting again!</string>
     <string name="not_uploaded_yet">The document you asked for, is not uploaded yet.</string>
     <string name="faq_exams_url">https://intranet.cb.amrita.edu/?q=exam</string>
+    <string name="paypal_url">https://paypal.me/rajkumaar23</string>
 </resources>
